--- a/SurveyMicro/src/main/resources/application.yml
+++ b/SurveyMicro/src/main/resources/application.yml
@@ -4,10 +4,10 @@ spring:
   application:
     name: survey-service
   datasource:
-    url: jdbc:mysql://localhost:3306/surveydb
-    username: root
-    password: pass@word1
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://localhost:5432/surveydb
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
